[tool.poetry]
name = "schema-abtf-wrapper"
version = "1.0.0"
description = ""
authors = ["Reue Munz <reue5118@protonmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
requests = "^2.32.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
